--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
+# This file lists all contributors to the repository
 Osaivbie Iguagbonmwen <osaivbieiguagbonmwen@gmail.com>
 God'sfavour Chukwudi <godsfavourchukwudi21@gmail.com>
